# NASTRAN-95

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
mds/: PAKBLK.COM  bufchk.f  cputim.f  dbmdia.f  dsiodd.f  dsupkc.f  nastim.f
mis/: endsys.f  partn3.f  pexit.f  rcard.f  rcard2.f  smc2cd.f  smc2cs.f  smc2rd.f  smc2rs.f  sofut.f  trd1e.f
scripts/: find_binary.py
utility/: nastplot.f
